# email_newsletter

./: .gitignore  Cargo.toml  Dockerfile  README.md  \  spec.yaml
configuration/: base.yaml  local.yaml
migrations/: 20240210021127_create_subscriptions_table.sql  20240406002538_create_subscription_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  error_handling.rs  lib.rs  main.rs  startup.rs  telemetry.rs  templates.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
templates/: index.html
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletter.rs  subscriptions.rs
